//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.validate;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_generate_equals_and_hash = false;
option java_multiple_files = true;
option java_outer_classname = "ConstraintViolationProto";
option java_package = "io.spine.validate";

import "google/protobuf/any.proto";

import "spine/base/field_path.proto";

// A validation constraint violation for a message field.
message ConstraintViolation {
    // An error message format string for this constraint violation.
    // Contains `%s` format specifiers if the violation has one or more parameters.
    string msg_format = 1;

    // Parameters (as strings) referenced by the format specifiers in the error message format string.
    repeated string param = 2;

    // A path to an invalid field.
    base.FieldPath field_path = 3;

    // A value of an invalid field.
    // Contains a corresponding wrapper message for primitives
    // (google.protobuf.StringValue for "string" field type and so on).
    google.protobuf.Any field_value = 4;

    // Constraint violations for fields of this message field.
    repeated ConstraintViolation violation = 5;
}
